[package]
name = "totem_of_ket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
user_input = "0.1.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tui = "0.19.0"
crossterm = "0.26.0"

rand = "0.8.5"
